//payment.proto
syntax = "proto3";
package com.ecommerce.proto;

option java_multiple_files = false;
option java_package = "com.ecommerce.proto";
option java_outer_classname = "PaymentMessage";

// 결제 요청 이벤트
message PaymentRequestedEvent {
  string order_uuid = 1;
  double amount = 2;
  string payment_method = 3;
  map<string, string> payment_details = 4;
  int64 requested_dt = 5; // Unix timestamp in milliseconds
}

// 결제 성공 이벤트
message PaymentSuccessEvent {
  string order_uuid = 1;
  int64 payment_id = 2;
  double amount = 3;
  string transaction_id = 4;
  int64 completed_dt = 5; // Unix timestamp in milliseconds
}

// 결제 실패 이벤트
message PaymentFailedEvent {
  string order_uuid = 1;
  int64 payment_id = 2;
  double amount = 3;
  string failure_reason = 4;
  int64 failed_dt = 5; // Unix timestamp in milliseconds
}

// 결제 취소 이벤트
message PaymentCancelledEvent {
  string order_uuid = 1;
  int64 payment_id = 2;
  double amount = 3;
  string cancel_reason = 4;
  int64 cancelled_dt = 5; // Unix timestamp in milliseconds
}
